tests/baselines/reference/parserComputedPropertyName7.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName7.ts(2,4): error TS1164: Computed property names are not allowed in class property declarations.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName7.ts (1 errors) ====
    class C {
       [e]
       ~~~
!!! error TS1164: Computed property names are not allowed in class property declarations.
    }